📚 Auto-update: News data refreshed - 2026-01-05 19:14 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -40358,5 +40358,109 @@
         "published": "Mon, 05 Jan 2026 17:14:39 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Awfis Chief Amit Ramani On How Coworking Is Fuelling India\u2019s GCC Ambitions\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/04/GCC-Awfis-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Coworking space provider Awfis has announced a rejig in its top deck, with CFO Ravi Dugar putting down his papers&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/hacktivist-deletes-white-supremacist-websites-live-on-stage-during-hacker-conference/",
+        "title": "Hacktivist deletes white supremacist websites live on stage during hacker conference",
+        "link": "https://techcrunch.com/2026/01/05/hacktivist-deletes-white-supremacist-websites-live-on-stage-during-hacker-conference/",
+        "published": "Mon, 05 Jan 2026 18:57:31 +0000",
+        "source": "TechCrunch",
+        "summary": "A hacker known as Martha Root broke in and deleted three white supremacists websites at the end of a talk during the annual hacker conference Chaos Communication Congress in Germany."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/offshore-wind-developers-sue-trump-administration-for-halting-25b-in-projects/",
+        "title": "Offshore wind developers sue Trump administration for halting $25B in projects",
+        "link": "https://techcrunch.com/2026/01/05/offshore-wind-developers-sue-trump-administration-for-halting-25b-in-projects/",
+        "published": "Mon, 05 Jan 2026 18:20:23 +0000",
+        "source": "TechCrunch",
+        "summary": "The lawsuits seek to reverse the Department of the Interior's stop-work order, which affected five offshore wind projects off the Eastern Seaboard."
+    },
+    {
+        "id": "https://www.theverge.com/tech/854556/lego-announces-smart-brick-the-most-significant-evolution-in-50-years",
+        "title": "Lego announces Smart Brick, the &#8216;most significant evolution&#8217; in 50 years",
+        "link": "https://www.theverge.com/tech/854556/lego-announces-smart-brick-the-most-significant-evolution-in-50-years",
+        "published": "2026-01-05T14:00:00-05:00",
+        "source": "The Verge",
+        "summary": "On March 1st, 2026, The Lego Group will begin selling the most ambitious brick it's ever made: a tiny computer that fits entirely inside a classic 2&#215;4 Lego brick. When it detects NFC-equipped smart tags nearby, embedded inside new Lego tiles and new Lego minifigures, or when it sees other Smart Bricks, the company claims [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/855328/viral-reddit-delivery-app-ai-scam",
+        "title": "That viral Reddit post about food delivery apps was an AI scam",
+        "link": "https://www.theverge.com/news/855328/viral-reddit-delivery-app-ai-scam",
+        "published": "2026-01-05T13:43:02-05:00",
+        "source": "The Verge",
+        "summary": "A viral Reddit confessional about a \"major food delivery app\" posted January 2nd is most likely AI-generated. The original post by user Trowaway_whistleblow alleged that an unnamed food delivery company regularly delays customer orders, calls couriers \"human assets,\" and exploits their \"desperation\" for cash, among other indefensible actions. Nearly 90,000 upvotes and four days later, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/lego-smart-brick-new-digital-brain/",
+        "title": "Lego\u2019s Smart Brick Gives the Iconic Analog Toy a New Digital Brain",
+        "link": "https://www.wired.com/story/lego-smart-brick-new-digital-brain/",
+        "published": "Mon, 05 Jan 2026 19:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The new sensor-packed Smart Play Brick will land this spring as part of a special Star Wars collection. The update adds interactive lights and sound to the Lego experience\u2014including the Minifigs."
+    },
+    {
+        "id": "https://arstechnica.com/google/2026/01/gemini-expands-on-google-tv-bringing-nano-banana-and-veo-models-to-your-tv/",
+        "title": "Google TV\u2019s big Gemini update adds image and video generation, voice control for settings",
+        "link": "https://arstechnica.com/google/2026/01/gemini-expands-on-google-tv-bringing-nano-banana-and-veo-models-to-your-tv/",
+        "published": "Mon, 05 Jan 2026 17:51:36 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Google TV will let you generate and watch AI content on the big screen."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/x-blames-users-for-grok-generated-csam-no-fixes-announced/",
+        "title": "X blames users for Grok-generated CSAM; no fixes announced",
+        "link": "https://arstechnica.com/tech-policy/2026/01/x-blames-users-for-grok-generated-csam-no-fixes-announced/",
+        "published": "Mon, 05 Jan 2026 17:42:45 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Critics call for App Store ban after Grok sexualized images of minors."
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/the-biggest-tv-announcements-at-ces-2026-190929976.html?src=rss",
+        "title": "The biggest TV announcements at CES 2026",
+        "link": "https://www.engadget.com/home/home-theater/the-biggest-tv-announcements-at-ces-2026-190929976.html?src=rss",
+        "published": "Mon, 05 Jan 2026 19:09:29 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>CES is once again where TV manufacturers lay out their plans for the year ahead, and <a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-from-techs-biggest-conference-in-las-vegas-153146838.html\" target=\"_blank\">CES 2026</a> is shaping up to be a showcase of both familiar rivalries and genuinely new display tech. While OLED and Mini LED remain central to most lineups, <a class=\"link\" href=\"https://www.engadget.com/home/home-theater/what-are-micro-rgb-tvs-and-why-are-they-ever"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/lego-unveils-a-technology-packed-smart-brick-at-ces-2026-190000511.html?src=rss",
+        "title": "Lego unveils a technology-packed Smart Brick at CES 2026",
+        "link": "https://www.engadget.com/entertainment/lego-unveils-a-technology-packed-smart-brick-at-ces-2026-190000511.html?src=rss",
+        "published": "Mon, 05 Jan 2026 19:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Lego bricks come in a ridiculously vast array of sizes and shapes, but the company is unveiling an entirely new take on its classic shape at CES 2026. Meet the Lego Smart Brick, a standard-sized 2 x 4 brick that\u2019s packed with modern technology to enable sets that can respond to how they\u2019re played with or the sets you build. It\u2019s part of a <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=70bceed8-b1ae-4af0-9fde-faa9258e1bc8&amp;siteId=us-engadget&amp;pageId=1"
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/what-are-micro-rgb-tvs-and-why-are-they-everywhere-at-ces-2026-182441543.html?src=rss",
+        "title": "What are Micro RGB TVs and why are they everywhere at CES 2026?",
+        "link": "https://www.engadget.com/home/home-theater/what-are-micro-rgb-tvs-and-why-are-they-everywhere-at-ces-2026-182441543.html?src=rss",
+        "published": "Mon, 05 Jan 2026 18:24:42 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Micro RGB TVs first arrived <a href=\"https://www.engadget.com/home/home-theater/samsungs-new-29999-micro-rgb-tv-looks-ridiculously-good-194629549.html\"><ins>last year</ins></a> with little fanfare and a confusing name, so you may have mistaken it for other panel tech or not even noticed. That is not likely to be the case this year, though \u2014 it\u2019s the hot new \u201cluxury\u201d display technology and is <a href=\"https://www.engadget.com/home/home-theater/lg-will-debut-its-first-micro-rgb-television-at-ce"
+    },
+    {
+        "id": "https://elbowgreasegames.substack.com/p/when-good-actors-can-trust-each-other",
+        "title": "How Y Combinator made it smart to trust founders",
+        "link": "https://elbowgreasegames.substack.com/p/when-good-actors-can-trust-each-other",
+        "published": "Mon, 05 Jan 2026 17:20:01 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46501677\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-exciting-ces-products-you-can-buy-now/",
+        "title": "The 4 most exciting CES products you can buy right now",
+        "link": "https://www.zdnet.com/article/most-exciting-ces-products-you-can-buy-now/",
+        "published": "Mon, 05 Jan 2026 19:06:01 GMT",
+        "source": "Latest news",
+        "summary": "Add some of the most innovative tech to your cart right now. Here are our favorite CES products you can buy or preorder now."
+    },
+    {
+        "id": "https://www.zdnet.com/article/chatgpt-generative-ai-healthcare-advice-widespread-how-safe/",
+        "title": "40 million people globally are using ChatGPT for healthcare - but is it safe?",
+        "link": "https://www.zdnet.com/article/chatgpt-generative-ai-healthcare-advice-widespread-how-safe/",
+        "published": "Mon, 05 Jan 2026 19:03:54 GMT",
+        "source": "Latest news",
+        "summary": "The widespread embrace of generative AI as a medical guide is coinciding with a huge spike in the cost of health insurance premiums for millions of Americans."
     }
 ]
