--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -40462,5 +40462,77 @@
         "published": "Mon, 05 Jan 2026 19:03:54 GMT",
         "source": "Latest news",
         "summary": "The widespread embrace of generative AI as a medical guide is coinciding with a huge spike in the cost of health insurance premiums for millions of Americans."
+    },
+    {
+        "id": "https://www.wired.com/story/beats-solo-4-deal-126/",
+        "title": "These On-Ear Beats Headphones Are Marked Down by $70",
+        "link": "https://www.wired.com/story/beats-solo-4-deal-126/",
+        "published": "Mon, 05 Jan 2026 19:10:55 +0000",
+        "source": "WIRED",
+        "summary": "What these headphones lack in active noise canceling, they make up for with big, bold sound."
+    },
+    {
+        "id": "https://www.engadget.com/transportation/how-to-watch-the-hyundai-ces-2026-press-conference-live-190051823.html?src=rss",
+        "title": "How to watch the Hyundai CES 2026 press conference live",
+        "link": "https://www.engadget.com/transportation/how-to-watch-the-hyundai-ces-2026-press-conference-live-190051823.html?src=rss",
+        "published": "Mon, 05 Jan 2026 19:59:08 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"Hyundai's wheeled robot took home an award.\" src=\"https://s.yimg.com/os/creatr-uploaded-images/2026-01/938979f0-e9dd-11f0-b73f-c1acf71c1faf\" style=\"height: 848px; width: 1910px;\" /><figcaption></figcaption><div class=\"photo-credit\">Hyundai</div></figure>\n<p>CES has long felt like a full-on auto show, but the car-centric energy seems somewhat muted at <a href=\"https://www.engadget.com/big-tech/ces-2026-preview-what-were-expecting-from-techs-biggest-conference-in-january-12000076"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/paris-court-finds-10-people-guilty-of-cyberbullying-brigitte-macron-195500994.html?src=rss",
+        "title": "Paris court finds 10 people guilty of cyberbullying Brigitte Macron",
+        "link": "https://www.engadget.com/social-media/paris-court-finds-10-people-guilty-of-cyberbullying-brigitte-macron-195500994.html?src=rss",
+        "published": "Mon, 05 Jan 2026 19:55:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A Paris court has found 10 people guilty of cyberbullying Brigitte Macron, wife of President of France Emmanuel Macron, <a class=\"link\" href=\"https://www.bbc.com/news/articles/c78v6z7597yo\" target=\"_blank\">the <em>BBC</em> reports</a>. The judge found that the defendants made false claims about Macron's gender and sexuality, and &quot;malicious remarks&quot; about the 24-year age gap between Macron and her spouse.</p><p>The defendants, eight men and two women, received a range of sentences, i"
+    },
+    {
+        "id": "https://www.engadget.com/ai/nvidia-is-reportedly-bringing-back-2021s-rtx-3060-gpu-because-ai-is-eating-all-of-the-newer-cards-194241706.html?src=rss",
+        "title": "NVIDIA is reportedly bringing back 2021's RTX 3060 GPU because AI is eating all of the newer cards",
+        "link": "https://www.engadget.com/ai/nvidia-is-reportedly-bringing-back-2021s-rtx-3060-gpu-because-ai-is-eating-all-of-the-newer-cards-194241706.html?src=rss",
+        "published": "Mon, 05 Jan 2026 19:42:41 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A reputable leaker has indicated that NVIDIA plans on bringing the RTX 3060 back to market, <a href=\"https://kotaku.com/nvidia-rtx-3060-returning-2026-dram-shortage-gpus-expensive-prices-2000656687\">according to reports by <em>Kotaku</em></a> and <a href=\"https://wccftech.com/nvidia-to-bring-back-geforce-rtx-3060-q1-2026-tackle-memory-shortages/\"><em>WFCCTech</em></a>. It first released the GPU <a href=\"https://www.engadget.com/nvidia-rtx-3060-ti-review-170018640.html\">at the beginning of 202"
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/lg-sound-suite-hands-on-at-ces-2026-home-theater-powered-by-dolby-atmos-flexconnect-192709499.html?src=rss",
+        "title": "LG Sound Suite hands-on at CES 2026: Home theater powered by Dolby Atmos FlexConnect",
+        "link": "https://www.engadget.com/home/home-theater/lg-sound-suite-hands-on-at-ces-2026-home-theater-powered-by-dolby-atmos-flexconnect-192709499.html?src=rss",
+        "published": "Mon, 05 Jan 2026 19:27:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Dolby introduced its FlexConnect technology <a class=\"link\" href=\"https://www.engadget.com/dolby-atmos-will-use-your-tv-to-expand-living-room-speaker-setups-123021095.html\" target=\"_blank\">a few years ago</a>, vowing that it would allow customers to position soundbars and speakers anywhere in a room. The company said the platform would then reconfigure the sound automatically, taking into account any locations that may be further away from the center sweet spot. At CES 2026, LG is the first t"
+    },
+    {
+        "id": "https://andrew.grahamyooll.com/blog/Try-to-Take-My-Position/",
+        "title": "Try to take my position: The best promotion advice I ever got",
+        "link": "https://andrew.grahamyooll.com/blog/Try-to-Take-My-Position/",
+        "published": "Fri, 02 Jan 2026 15:56:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46466027\">Comments</a>"
+    },
+    {
+        "id": "https://ronjeffries.com/xprog/articles/refactoring-not-on-the-backlog/",
+        "title": "Refactoring \u2013 Not on the backlog (2014)",
+        "link": "https://ronjeffries.com/xprog/articles/refactoring-not-on-the-backlog/",
+        "published": "Mon, 05 Jan 2026 19:23:56 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46503439\">Comments</a>"
+    },
+    {
+        "id": "https://www.theguardian.com/games/2026/jan/05/sega-co-founder-david-rosen-dies",
+        "title": "Sega co-founder David Rosen has died",
+        "link": "https://www.theguardian.com/games/2026/jan/05/sega-co-founder-david-rosen-dies",
+        "published": "Mon, 05 Jan 2026 18:00:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46502239\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/freebsd-vs-slackware/",
+        "title": "FreeBSD vs. Slackware: Which super stable OS is right for you?",
+        "link": "https://www.zdnet.com/article/freebsd-vs-slackware/",
+        "published": "Mon, 05 Jan 2026 20:02:14 GMT",
+        "source": "Latest news",
+        "summary": "One is the world's oldest Linux distro, the other isn't Linux at all. Each delivers superb stability - let's compare."
     }
 ]
