--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -40686,5 +40686,61 @@
         "published": "Mon, 05 Jan 2026 20:35:53 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Uncademy Rolls Back Changes To ESOP Exercise Window\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/unacademy-ESOP-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Edtech unicorn Unacademy has reportedly rolled back its contentious plan to reduce the ESOP exercise window to just 30 days&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/boston-dynamicss-next-gen-humanoid-robot-will-have-google-deepmind-dna/",
+        "title": "Boston Dynamics\u2019s next-gen humanoid robot will have Google DeepMind DNA",
+        "link": "https://techcrunch.com/2026/01/05/boston-dynamicss-next-gen-humanoid-robot-will-have-google-deepmind-dna/",
+        "published": "Mon, 05 Jan 2026 21:55:55 +0000",
+        "source": "TechCrunch",
+        "summary": "Google's AI research lab is working with Boston Dynamics to make Atlas act more like a human."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/nvidia-launches-alpamayo-open-ai-models-that-allow-autonomous-vehicles-to-think-like-a-human/",
+        "title": "Nvidia launches Alpamayo, open AI models that allow autonomous vehicles to \u2018think like a human\u2019",
+        "link": "https://techcrunch.com/2026/01/05/nvidia-launches-alpamayo-open-ai-models-that-allow-autonomous-vehicles-to-think-like-a-human/",
+        "published": "Mon, 05 Jan 2026 21:52:22 +0000",
+        "source": "TechCrunch",
+        "summary": "Nvidia unveiled Alpamayo at CES 2026, which includes a reasoning vision language action model that allows an autonomous vehicle to think more like a human and provide chain-of-thought reasoning."
+    },
+    {
+        "id": "https://loworbitsecurity.com/radar/radar16/",
+        "title": "There were BGP anomalies during the Venezuela blackout",
+        "link": "https://loworbitsecurity.com/radar/radar16/",
+        "published": "Mon, 05 Jan 2026 21:05:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46504963\">Comments</a>"
+    },
+    {
+        "id": "https://e360.yale.edu/digest/2025-energy-review",
+        "title": "A Year of Clean Energy Milestones",
+        "link": "https://e360.yale.edu/digest/2025-energy-review",
+        "published": "Mon, 05 Jan 2026 20:13:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46504198\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-exciting-tvs-ces-2026-lg-hisense-and-tcl/",
+        "title": "The 4 most exciting TVs we're seeing at CES 2026 so far (including Samsung and LG)",
+        "link": "https://www.zdnet.com/article/most-exciting-tvs-ces-2026-lg-hisense-and-tcl/",
+        "published": "Mon, 05 Jan 2026 21:56:00 GMT",
+        "source": "Latest news",
+        "summary": "At the Las Vegas trade show, we're already seeing several premium offerings from the world's leading TV manufacturers. Here are the standouts."
+    },
+    {
+        "id": "https://www.zdnet.com/article/microsoft-surface-laptop-5g-review-2025/",
+        "title": "One of the most premium work laptops I've tested lets you finally ditch Wi-Fi for good",
+        "link": "https://www.zdnet.com/article/microsoft-surface-laptop-5g-review-2025/",
+        "published": "Mon, 05 Jan 2026 21:26:00 GMT",
+        "source": "Latest news",
+        "summary": "Microsoft's Surface Laptop 5G combines a positively premium build with an always-on connection."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-2026-tvs-lineup-ces-micro-rgb/",
+        "title": "Samsung reveals 2026 TVs, including a 130-inch Micro RGB model",
+        "link": "https://www.zdnet.com/article/samsung-2026-tvs-lineup-ces-micro-rgb/",
+        "published": "Mon, 05 Jan 2026 21:18:45 GMT",
+        "source": "Latest news",
+        "summary": "While most TVs in the lineup are getting upgrades, one model is losing an important feature."
     }
 ]
